# gakusai2021

./: .gitmodules  Readme.md  gakusai2021.py  gakusai2021ver1.1.py  requirements.txt
Client/: Cargo.toml  main.py  readme.md
Client/src/: main.rs
Server/: CMakeLists.txt  errorhandling.h  globalEncodedImageContent.cpp  globalEncodedImageContent.h  main.cpp  setup.sh  tcp.h  tcpTxRx.h  udp.h  udpTx.h
